# alien-physics-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-train-lock.txt
docs/: grpo_training.md  handoff.md
docs/design/: README.md  coupled-latent-mechanics.md  curriculum.md  data-requirements.md
docs/results/: 2026-06-03-grpo.md  2026-06-04-grpo.md  2026-06-05-grpo.md  2026-06-06-grpo.md  2026-06-07-grpo.md  2026-06-08-grpo.md
scripts/: analyze_aggregation.py  bench_openai.py  eval_grpo.py  launch_baseline_g8.sh  launch_diameter.sh  launch_diameter_beta0075.sh  launch_diameter_beta0075_s350.sh  launch_diameter_beta01.sh  launch_diameter_lr4e6.sh  launch_mw4.sh  launch_mw4_lr4e6.sh  launch_varnoise.sh  launch_vary_precision.sh  launch_vary_tools.sh  launch_vary_tools_1k.sh  launch_vary_tools_kl.sh  launch_vary_tools_kl005.sh  launch_vary_tools_kl01.sh  smoke_diameter.sh  smoke_diversity.sh  train_grpo.py  watch_run.py
src/alien_physics_lab/: __init__.py  agents.py  cli.py  env.py  grpo_data.py  grpo_env.py  hf_runner.py  mlx_runner.py  openai_runner.py  world.py
tests/: test_diversity.py  test_env.py
